# arthobby-backend

./: .gitignore  CMakeLists.txt  README.md
config/: config.json
include/Controllers/: CartController.hpp  LoginController.hpp  ProductController.hpp  SwaggerController.hpp
include/Filters/: JwtFilter.hpp
include/Models/: Cart.hpp  Product.hpp  User.hpp
scripts/: setup_db.sh
sql/: create_tables.sql  setup.sql
src/: main.cpp
src/Controllers/: CartController.cpp  LoginController.cpp  ProductController.cpp  StaticController.cpp  SwaggerController.cpp
src/Database/: DatabaseManager.cpp
src/Filters/: JwtFilter.cpp
src/Models/: Cart.cpp  Product.cpp  User.cpp  model.json
static/: swagger.json
